# instruction-files

./: Cargo.toml  DEV.md  README.md  install.sh
.claude/skills/instruction-files/: SKILL.md
.claude/skills/instruction-files/runbooks/: instruction-files-audit.md
.github/workflows/: ci.yml  release.yml
src/: audit.rs  discovery.rs  lib.rs  main.rs  ontology.rs  spec_audit.rs  types.rs
