[package]
name = "instruction-files"
version = "0.1.0"
edition = "2021"
description = "Discovery, auditing, and sync for AGENTS.md/CLAUDE.md instruction files"
license = "MIT"
repository = "https://github.com/btakita/instruction-files"

[dependencies]
anyhow = "1"
glob = "0.3"
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
