[package]
name = "instruction-files"
version = "0.2.0"
edition = "2024"
description = "Discovery, auditing, and sync for AGENTS.md/CLAUDE.md instruction files"
license = "MIT"
repository = "https://github.com/btakita/instruction-files"

[dependencies]
agent-kit = "0.4"
agent-rules = "0.1"
agent-runbooks = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
once_cell = "1"
existence = { version = "0.4", optional = true }
module-harness = { version = "0.2", optional = true }

[features]
default = []
ontology = ["existence"]
spec-audit = ["module-harness"]

[dev-dependencies]
tempfile = "3"
